<resources>
    <string name="app_name">ContactsManager</string>
    <string name="show_additional_fields">Show Additional Fields</string>
    <string name="hide_additional_fields">Hide Additional Fields</string>
    <string name="name">Name</string>
    <string name="phoneNumber">Number</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="company">Company</string>
    <string name="jobTitle">Job Title</string>
    <string name="website">Website</string>
    <string name="im">IM</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="phone_error">Phone number received from intent is null!</string>

</resources>
